# Phaselith

./: .gitignore  CLA.md  COMMERCIAL-LICENSE.md  CONTRIBUTING.md  CONTRIBUTORS.md  Cargo.toml  README.md  README.zh-CN.md  README.zh-TW.md  deploy_apo_fix.ps1  package-lock.json  package.json
chrome-ext/: STORE-LISTING.md  analysis.html  manifest.json  offscreen.html  popup.html
chrome-ext/_locales/en/: messages.json
chrome-ext/_locales/zh_CN/: messages.json
chrome-ext/_locales/zh_TW/: messages.json
chrome-ext/src/: analysis.js  background.js  offscreen.js  popup.js  worklet-processor.js
crates/apo-dll/: Cargo.toml
crates/apo-dll/src/: aggregation.rs  apo_com.rs  apo_impl.rs  audio_dump.rs  class_factory.rs  debug_log.rs  format_negotiate.rs  guids.rs  lib.rs  mmap_ipc.rs  registry.rs
crates/apo-test-host/: Cargo.toml
crates/apo-test-host/src/: main.rs
crates/core-audio/: Cargo.toml
crates/core-audio/examples/: control.rs
crates/core-audio/resources/: Info.plist
crates/core-audio/src/: constants.rs  debug_log.rs  io_engine.rs  lib.rs  mmap_ipc.rs  object_model.rs  plugin_interface.rs  properties.rs
crates/dsp-core/: Cargo.toml
crates/dsp-core/src/: config.rs  engine.rs  frame.rs  lib.rs  module_trait.rs  pipeline.rs  psychoacoustic.rs  types.rs
crates/dsp-core/src/buffers/: scratch.rs
crates/dsp-core/src/fft/: planner.rs
crates/dsp-core/src/modules/: m0_orchestrator.rs  m7_governor.rs  mod.rs
crates/dsp-core/src/modules/m1_damage/: features.rs  mod.rs  posterior.rs  smoothing.rs
crates/dsp-core/src/modules/m2_lattice/: energy.rs  group_delay.rs  mod.rs  stft.rs
crates/dsp-core/src/modules/m3_factorizer/: air.rs  harmonic.rs  mod.rs  spatial.rs  transient.rs
crates/dsp-core/src/modules/m4_solver/: air_cont.rs  declip.rs  harmonic_ext.rs  mod.rs  phase_relax.rs  side_recovery.rs
crates/dsp-core/src/modules/m5_reprojection/: acceptance.rs  constraints.rs  degrader.rs  error.rs  mod.rs  overlap_add.rs  synthesizer.rs
crates/dsp-core/src/modules/m6_mixer/: crossover.rs  kweighting.rs  masking.rs  mod.rs  true_peak.rs
crates/dsp-core/src/ports/: config_source.rs  mod.rs  telemetry.rs
crates/dsp-core/src/stages/: mod.rs  stage_trait.rs
crates/dsp-core/src/stages/s0_fingerprint/: clipping.rs  compression.rs  cutoff.rs  mod.rs  stereo.rs
crates/dsp-core/src/stages/s1_dynamics/: declip.rs  expander.rs  mod.rs
crates/dsp-core/src/stages/s2_harmonics/: classify.rs  decay.rs  fundamental.rs  mod.rs
crates/dsp-core/src/stages/s3_spectral/: extension.rs  masking.rs  mod.rs  noise_shape.rs
crates/dsp-core/src/stages/s4_transient/: mod.rs  pre_echo.rs
crates/dsp-core/src/stages/s5_phase/: blend.rs  group_delay.rs  mod.rs
crates/dsp-core/tests/: apo_audio_safety_test.rs  apo_crackling_test.rs  apo_instance_switch_test.rs  apo_realworld_test.rs  audio_quality_analysis.rs  click_gate_test.rs  engine_wiring_tests.rs  extreme_value_tests.rs  integration_tests.rs  native_rt_isolation_test.rs  pipeline_wiring_tests.rs
crates/license/: Cargo.toml
crates/license/src/: lib.rs
crates/tauri-app/: Cargo.toml  package.json  tauri.conf.json
crates/tauri-app/frontend/: index.html  package-lock.json  package.json  vite.config.js
crates/tauri-app/frontend/src/: App.vue
crates/tauri-app/frontend/src/__tests__/: App.state.test.js
crates/tauri-app/frontend/src/components/: SliderControl.vue
crates/tauri-app/icons/: icon.icns
crates/tauri-app/src/: com_bind.rs  commands.rs  endpoint_bind.rs  install_script.ps1  ipc_bridge.rs  main.rs
crates/vst3/: Cargo.toml  README.md
crates/vst3/src/: lib.rs
crates/wasm-bridge/: Cargo.toml
crates/wasm-bridge/src/: lib.rs
docs/: 00-DOCUMENT-MAP.md  01-PROJECT-SCOPE.md  02-REPOSITORY-AND-RUNTIMES.md  03-CORE-ALGORITHM.md  04-BROWSER-RUNTIME-FLOW.md  05-WINDOWS-APO-RUNTIME-FLOW.md  06-CONTROLS-STYLES-AND-PRESETS.md  07-VALIDATION-AND-LISTENING.md  08-ROADMAP-AND-LIMITATIONS.md  09-LICENSING-AND-CONTRIBUTIONS.md  10-DEFENSIVE-PUBLICATION.md  11-CHROME-STORE-LAUNCH-AND-MONETIZATION.md  12-PUBLIC-V0.1-OPEN-SOURCE-PACKAGING.md  13-BROWSER-TRANSIENT-REPAIR-AND-MACOS-FIX.md  14-M2-STFT-ENGINE-CRACKLING.md  15-APO-CHROME-COEXISTENCE.md  16-AUDIO-ARCHITECTURE-ANALYSIS.md  17-BUILD-PROFILES-AND-REALTIME-SAFETY.md  18-PSYCHOACOUSTIC-MODULE-AND-ADAPTIVE-CONVERGENCE.md  19-OPTIMIZATION-SURVEY-AND-PATENT-FREE-ALGORITHMS.md  20-CEPSTRAL-ENVELOPE-AND-HIGHFIDELITY-MODE.md  21-DIRECTIONAL-HEADROOM-MIXING.md  21-DSP-PARAMETER-REFERENCE.md  21-SFX-TO-EFX-MULTI-STREAM-FIX.md  22-APO-OLA-DISTORTION-ROOT-CAUSES.md  23-ARCHITECTURE-REPLAN-REVIEW.md  24-FFT-FULL-IMPLEMENTATION-PLAN.md  30-LICENSE-INTERFACE-SPEC.md
scripts/: build-extension.sh  build.ps1  deploy-apo.ps1  package-extension.sh  release.ps1  release.sh  revert-macos-local-signing.sh  setup-macos-local-signing.sh
tests/: apo-rapid-rebuild.md
tools/: apo_diag.rs  check_apo_registry.ps1  generate-store-screenshots.js  screenshot-popup.html  test_dll_load.ps1
tools/audio_analysis/: Cargo.toml
tools/audio_analysis/src/: main.rs
