[workspace]
resolver = "2"
members = [
    "crates/dsp-core",
    "crates/license",
    "crates/apo-dll",
    "crates/apo-test-host",
    "crates/wasm-bridge",
    "crates/tauri-app",
    "crates/core-audio",
    "crates/vst3",
]
exclude = [
    "tools/audio_recorder",
    "tools/audio_analysis",
]

[workspace.package]
version = "0.1.24"
edition = "2021"
license = "AGPL-3.0-or-later"
authors = ["Howard Chen <chenhoward0401@gmail.com>"]

# ─── Real-time audio safety ───
# APO DLL runs in audiodg.exe's real-time thread.
# Debug build is 5-10x slower → CPU overruns → crackling.
# Always compile the APO and DSP core with optimizations,
# even during `cargo tauri dev` (debug mode).
[profile.dev.package.phaselith-apo]
opt-level = 3

[profile.dev.package.phaselith-dsp-core]
opt-level = 3

[profile.dev.package.phaselith-core-audio]
opt-level = 3

[profile.dev.package.phaselith-vst3]
opt-level = 3
