[package]
name = "phaselith-apo"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
# Enable native-rt for zero-alloc hot path on Windows RT thread
phaselith-dsp-core = { path = "../dsp-core", features = ["native-rt"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_Media_Audio",
    "Win32_Media_Audio_Apo",
    "Win32_System_Registry",
    "Win32_System_Memory",
    "Win32_Security",
    "Win32_System_LibraryLoader",
    "Win32_Storage_FileSystem",
    "implement",
] }
windows-core = "0.58"
