[package]
name = "apo-test-host"
version.workspace = true
edition.workspace = true

[[bin]]
name = "apo-test-host"
path = "src/main.rs"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_LibraryLoader",
    "Win32_Media_Audio",
    "Win32_Media_Audio_Apo",
] }
windows-core = "0.58"
