[package]
name = "phaselith-core-audio"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
phaselith-dsp-core = { path = "../dsp-core", features = ["native-rt"] }

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"
libc = "0.2"
